<resources>
    <string name="app_name">Citrine QnA App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome '"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gate_calculator">Gate Calculator</string>
    <string name="previous_year_papers">Previous year Papers</string>
    <string name="sing_in_register">Sing In</string>
    <string name="citrine_gate_prep">Citrine QnA Application</string>
    <string name="citrine_com">citrineWeb.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="create_a_new_acount">Create a New Account</string>
    <string name="signIn_as_a_tutor">Register as a Tutor</string>
    <string name="LogOut">LogOut</string>
    <string name="description">Describe the Question</string>
    <string name="show_previous_QNA">Show Previous QNAs</string>
    <string name="upload">Upload</string>
    <string name="choose_file">Choose file</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>